package cl.ucn.disc.poo.estudiovial.domain;

public class Conductor {
}
