@startuml
skin rose
set separator none
' left to right direction
hide empty members

package cl.ucn.disc.poo.estudiovial {

    package domain {

        class Automovil {
            - {static} placaPatente: String
            - marca: String
            - modelo: String
            - capacidadEstanque: Double
            - rendimientoCombustible: Double
            - conductorActual: Conductor
            ----
            + Automovil(placaPatente: String, marca: String, modelo: String, capacidadEstanque: Double, rendimientoCombustible: Double)
            + getPlacaPatente(): String
            + getMarca(): String
            + getModelo(): String
            + getCapacidadEstanque(): Double
            + getRendimientoCombustible(): Double
            ....
            + getConductorActual(): Conductor
        }
        Automovil "0..*" --> "0..1" Conductor

        enum TipoLicencia {
            * A
            * B
            * C
        }

        enum NivelEducacional {
            * Basica
            * Media
            * Universitaria
            * Postitulo
        }

        class Conductor {
            - {static} RUT: String
            - nombre: String
            - edad: int
            - cantidadInfracciones: int
            - tipoLicencia: TipoLicencia
            - nivelEducacional: Postitulo
            - automoviles: Set<Automovil>
            ----
            + getRut(): String
            + getNombre(): String
            + getEdad(): int
            + getCantidadInfracciones(): int
            + getTipoLicencia(): TipoLicencia
            + getNivelEducacional(): Postitulo
            ....
            + getAutomoviles(): Set<Automovil>
        }
        Conductor "0..*" --> "1" TipoLicencia
        Conductor "0..*" --> "1" NivelEducacional

    }

}


@enduml
